# SecurePipe

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: security.yml
demo_app/: app.py
policies/: cicd.rego
reports/: security-summary.md
scanners/: run_gitleaks.py  run_pip_audit.py  run_semgrep.py  run_syft.py  run_trivy.py
scripts/: install_tools.sh  run_all_local.sh
utils/: aggregate_score.py  merge_reports.py
