[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securepipe"
version = "0.1.0"
description = "Security automation for CI/CD: SAST, SCA, secrets, container scans, SBOM, policy gates."
requires-python = ">=3.12"
dependencies = [
  "rich>=13.7",
  "pyyaml>=6.0.1"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-q"